export const snapshot = {};

snapshot[`TransportSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  enum: [
    "websocket",
    "twilio",
  ],
  type: "string",
}
`;

snapshot[`AgentConfigSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    builtinTools: {
      items: {
        enum: [
          "web_search",
          "visit_webpage",
          "fetch_json",
          "run_code",
          "user_input",
          "final_answer",
        ],
        type: "string",
      },
      type: "array",
    },
    greeting: {
      type: "string",
    },
    instructions: {
      type: "string",
    },
    name: {
      type: "string",
    },
    stopWhen: {
      type: "number",
    },
    sttPrompt: {
      type: "string",
    },
    voice: {
      type: "string",
    },
  },
  required: [
    "instructions",
    "greeting",
    "voice",
  ],
  type: "object",
}
`;

snapshot[`ToolSchemaSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    description: {
      type: "string",
    },
    name: {
      type: "string",
    },
    parameters: {
      additionalProperties: {},
      propertyNames: {
        type: "string",
      },
      type: "object",
    },
  },
  required: [
    "name",
    "description",
    "parameters",
  ],
  type: "object",
}
`;

snapshot[`DeployBodySchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    client: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
    env: {
      additionalProperties: {
        type: "string",
      },
      propertyNames: {
        type: "string",
      },
      type: "object",
    },
    transport: {
      anyOf: [
        {
          enum: [
            "websocket",
            "twilio",
          ],
          type: "string",
        },
        {
          items: {
            enum: [
              "websocket",
              "twilio",
            ],
            type: "string",
          },
          type: "array",
        },
      ],
    },
    worker: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
  },
  required: [
    "env",
    "worker",
    "client",
  ],
  type: "object",
}
`;

snapshot[`EnvSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: {},
  properties: {
    ASSEMBLYAI_API_KEY: {
      minLength: 1,
      type: "string",
    },
    LLM_MODEL: {
      type: "string",
    },
  },
  required: [
    "ASSEMBLYAI_API_KEY",
  ],
  type: "object",
}
`;

snapshot[`ServerMessageSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  oneOf: [
    {
      additionalProperties: false,
      properties: {
        audio_format: {
          const: "pcm16",
          type: "string",
        },
        protocol_version: {
          type: "number",
        },
        sample_rate: {
          type: "number",
        },
        tts_sample_rate: {
          type: "number",
        },
        type: {
          const: "ready",
          type: "string",
        },
      },
      required: [
        "type",
        "protocol_version",
        "audio_format",
        "sample_rate",
        "tts_sample_rate",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        text: {
          type: "string",
        },
        type: {
          const: "partial_transcript",
          type: "string",
        },
      },
      required: [
        "type",
        "text",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        text: {
          type: "string",
        },
        turn_order: {
          type: "number",
        },
        type: {
          const: "final_transcript",
          type: "string",
        },
      },
      required: [
        "type",
        "text",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        text: {
          type: "string",
        },
        turn_order: {
          type: "number",
        },
        type: {
          const: "turn",
          type: "string",
        },
      },
      required: [
        "type",
        "text",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        text: {
          type: "string",
        },
        type: {
          const: "chat",
          type: "string",
        },
      },
      required: [
        "type",
        "text",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "tts_done",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "cancelled",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "reset",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        details: {
          items: {
            type: "string",
          },
          type: "array",
        },
        message: {
          type: "string",
        },
        type: {
          const: "error",
          type: "string",
        },
      },
      required: [
        "type",
        "message",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "pong",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
  ],
}
`;

snapshot[`ClientMessageSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  oneOf: [
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "audio_ready",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "cancel",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "reset",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "ping",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        messages: {
          items: {
            additionalProperties: false,
            properties: {
              role: {
                enum: [
                  "user",
                  "assistant",
                ],
                type: "string",
              },
              text: {
                type: "string",
              },
            },
            required: [
              "role",
              "text",
            ],
            type: "object",
          },
          type: "array",
        },
        type: {
          const: "history",
          type: "string",
        },
      },
      required: [
        "type",
        "messages",
      ],
      type: "object",
    },
  ],
}
`;
